tests/errors/arrays/index-with-float.fn
---
Description: Array indexed with a float
Expected: FN3216
---

type Program
{
    fn Main -> i32
    {
        var arr = [1, 2, 3]
        var bad = arr[1.0]
        return 0
    }
}
